--- a/Product_info_summary.ipynb
+++ b/Product_info_summary.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "To open notebook in Colab please click below:\n",
         "\n",
-        "<a href=\"https://colab.research.google.com/github/pearl-yu/foster_2022fall/blob/2022-master/Homeworks/HW%202.ipynb\" target=\"_parent\"> <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\" /> </a>"
+        "<a href=\"https://github.com/YaaanW/superstore/blob/main/Product_info_summary.ipynb\" target=\"_parent\"> <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\" /> </a>"
       ],
       "metadata": {
         "id": "gvydYhYm2Uxv"
