--- a/Product_info_summary.ipynb
+++ b/Product_info_summary.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "To open notebook in Colab please click below:\n",
         "\n",
-        "<a href=\"https://github.com/YaaanW/superstore/blob/main/Product_info_summary.ipynb\" target=\"_parent\"> <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\" /> </a>"
+        "<a href=\"https://colab.research.google.com/drive/1Nbvcogw3qvVQFQdRzU7bpT1NkhPEy9P5?usp=sharing\" target=\"_parent\"> <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\" /> </a>"
       ],
       "metadata": {
         "id": "gvydYhYm2Uxv"
