--- a/Product_info_summary.ipynb
+++ b/Product_info_summary.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6Sm2P-446DcB",
-        "outputId": "ed1c3428-372c-49c0-b40d-9da0970e86e9"
+        "outputId": "91d267a4-27e7-4ce2-d7af-c0acb67d4abc"
       },
       "outputs": [
         {
@@ -41,11 +41,11 @@
           "name": "stdout",
           "text": [
             "Cloning into 'superstore'...\n",
-            "remote: Enumerating objects: 27, done.\u001b[K\n",
-            "remote: Counting objects: 100% (27/27), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (23/23), done.\u001b[K\n",
-            "remote: Total 27 (delta 8), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (27/27), done.\n",
+            "remote: Enumerating objects: 36, done.\u001b[K\n",
+            "remote: Counting objects: 100% (36/36), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (32/32), done.\u001b[K\n",
+            "remote: Total 36 (delta 10), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (36/36), done.\n",
             "/content/superstore/data\n"
           ]
         }
@@ -81,9 +81,9 @@
           "height": 363
         },
         "id": "eHY9Lx-n6puZ",
-        "outputId": "bf66ec58-cb0c-415e-87f4-92342149d216"
+        "outputId": "c681ba5e-bf3e-4996-8cd0-99bd94cffd87"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,7 +115,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9fd51909-0f89-42dc-be87-bac2dd0a5214\">\n",
+              "  <div id=\"df-9b780932-80c9-4b99-9545-fd7cffa6aeb7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -226,7 +226,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9fd51909-0f89-42dc-be87-bac2dd0a5214')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b780932-80c9-4b99-9545-fd7cffa6aeb7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -277,12 +277,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9fd51909-0f89-42dc-be87-bac2dd0a5214 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9b780932-80c9-4b99-9545-fd7cffa6aeb7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9fd51909-0f89-42dc-be87-bac2dd0a5214');\n",
+              "          const element = document.querySelector('#df-9b780932-80c9-4b99-9545-fd7cffa6aeb7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -305,7 +305,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 3
         }
       ]
     },
@@ -320,9 +320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0V5bVM6z7AAW",
-        "outputId": "aecce35d-1311-4663-f812-de12144770ec"
+        "outputId": "b21f8fb9-8d3b-43e4-dadc-1ffb2d2c2d52"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -332,7 +332,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 4
         }
       ]
     },
@@ -348,9 +348,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3-SrskJ38Epg",
-        "outputId": "0ddf205f-abd4-4925-c186-4b29ef6ba544"
+        "outputId": "8efb0e18-c678-49e7-8656-dc55bb4e4214"
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +365,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data1=data.drop_duplicates()\n",
+        "data1.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v2c3wL8BjWlk",
+        "outputId": "a736192d-ecfb-4f50-b0a2-ca42bc8b386c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10771, 5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     },
@@ -373,29 +400,29 @@
       "cell_type": "code",
       "source": [
         "# amount for each category\n",
-        "data[\"Category\"].value_counts()"
+        "data1[\"Category\"].value_counts()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-_ISRlfx8Sr8",
-        "outputId": "a879caf5-482a-4bf8-b6c5-51361144bf73"
+        "outputId": "a30a80f7-cd68-49ac-e6c5-7ee34f0054fc"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Office Supplies    31273\n",
-              "Technology         10141\n",
-              "Furniture           9876\n",
+              "Office Supplies    5957\n",
+              "Technology         2484\n",
+              "Furniture          2330\n",
               "Name: Category, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 7
         }
       ]
     },
@@ -403,16 +430,16 @@
       "cell_type": "code",
       "source": [
         "# How many categories \n",
-        "data[\"Category\"].nunique()"
+        "data1[\"Category\"].nunique()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QpzYcDgW_ALk",
-        "outputId": "04b43114-5449-4a58-b651-0d9e11baa7a0"
+        "outputId": "6568547d-175b-4df5-d2ed-e20e18484761"
       },
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +449,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 8
         }
       ]
     },
@@ -430,43 +457,43 @@
       "cell_type": "code",
       "source": [
         "# amount for each Sub-Category\t\n",
-        "data[\"Sub-Category\"].value_counts()"
+        "data1[\"Sub-Category\"].value_counts()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yi3hmcgv8hnQ",
-        "outputId": "57d6b753-1101-4ebe-ceeb-50f7ecceb803"
+        "outputId": "ddb8e6a1-3840-4820-89a2-045a009eabca"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Binders        6152\n",
-              "Storage        5059\n",
-              "Art            4883\n",
-              "Paper          3538\n",
-              "Chairs         3434\n",
-              "Phones         3357\n",
-              "Furnishings    3170\n",
-              "Accessories    3075\n",
-              "Labels         2606\n",
-              "Envelopes      2435\n",
-              "Supplies       2425\n",
-              "Fasteners      2420\n",
-              "Bookcases      2411\n",
-              "Copiers        2223\n",
-              "Appliances     1755\n",
-              "Machines       1486\n",
-              "Tables          861\n",
+              "Paper          825\n",
+              "Binders        781\n",
+              "Phones         733\n",
+              "Furnishings    719\n",
+              "Art            708\n",
+              "Accessories    700\n",
+              "Storage        684\n",
+              "Chairs         647\n",
+              "Envelopes      613\n",
+              "Labels         602\n",
+              "Appliances     587\n",
+              "Bookcases      583\n",
+              "Fasteners      583\n",
+              "Supplies       574\n",
+              "Copiers        537\n",
+              "Machines       514\n",
+              "Tables         381\n",
               "Name: Sub-Category, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 9
         }
       ]
     },
@@ -474,44 +501,44 @@
       "cell_type": "code",
       "source": [
         "# amount for each Sub-Category group by Category\n",
-        "data.groupby(['Category', 'Sub-Category']).size()"
+        "data1.groupby(['Category', 'Sub-Category']).size()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3U3vL1mt-ApY",
-        "outputId": "bad99668-1c45-48e4-9247-10691d4a6dd8"
+        "outputId": "a348bfec-9b2b-4ff0-9b31-f7aedf002ee0"
       },
-      "execution_count": 19,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Category         Sub-Category\n",
-              "Furniture        Bookcases       2411\n",
-              "                 Chairs          3434\n",
-              "                 Furnishings     3170\n",
-              "                 Tables           861\n",
-              "Office Supplies  Appliances      1755\n",
-              "                 Art             4883\n",
-              "                 Binders         6152\n",
-              "                 Envelopes       2435\n",
-              "                 Fasteners       2420\n",
-              "                 Labels          2606\n",
-              "                 Paper           3538\n",
-              "                 Storage         5059\n",
-              "                 Supplies        2425\n",
-              "Technology       Accessories     3075\n",
-              "                 Copiers         2223\n",
-              "                 Machines        1486\n",
-              "                 Phones          3357\n",
+              "Furniture        Bookcases       583\n",
+              "                 Chairs          647\n",
+              "                 Furnishings     719\n",
+              "                 Tables          381\n",
+              "Office Supplies  Appliances      587\n",
+              "                 Art             708\n",
+              "                 Binders         781\n",
+              "                 Envelopes       613\n",
+              "                 Fasteners       583\n",
+              "                 Labels          602\n",
+              "                 Paper           825\n",
+              "                 Storage         684\n",
+              "                 Supplies        574\n",
+              "Technology       Accessories     700\n",
+              "                 Copiers         537\n",
+              "                 Machines        514\n",
+              "                 Phones          733\n",
               "dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 10
         }
       ]
     },
@@ -519,16 +546,16 @@
       "cell_type": "code",
       "source": [
         "# How many sub-categories in each category\n",
-        "data.groupby('Category')['Sub-Category'].nunique()"
+        "data1.groupby('Category')['Sub-Category'].nunique()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ky0Ae6is_PyB",
-        "outputId": "ea58a945-2df8-4012-fd55-15559372aa43"
+        "outputId": "bc83bc3a-a6bf-4258-ea06-bc2faa44ea46"
       },
-      "execution_count": 39,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -542,14 +569,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "data[data['Sub-Category'] == 'Paper'].head(20)"
+        "data1[data1['Sub-Category'] == 'Paper'].head(20)"
       ],
       "metadata": {
         "colab": {
@@ -559,7 +586,7 @@
         "id": "38nBC2xMEQWW",
         "outputId": "61cd0ef7-8dcd-414c-8a6c-d73cf20a1539"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
